# orderflowkit

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: api_reference.md  index.md  quickstart.md
examples/: quickstart_bar_metrics.py
src/orderflowkit/: __init__.py  pipeline.py
src/orderflowkit/book/: __init__.py  checksum.py  levels.py  local_book.py  side.py  sync.py  validators.py
src/orderflowkit/cli/: main.py
src/orderflowkit/features/: __init__.py  depth.py  flow.py  imbalance.py  pipeline.py  quote.py  volatility.py
src/orderflowkit/feeders/: __init__.py  alphavantage_feeder.py  base.py  binance_rest.py  fred_feeder.py  stooq_feeder.py  yfinance_feeder.py
src/orderflowkit/labels/: __init__.py  classification.py  liquidity.py  returns.py
src/orderflowkit/metrics/: __init__.py
src/orderflowkit/metrics/efficiency/: __init__.py  hurst.py  variance_ratio.py
src/orderflowkit/metrics/liquidity/: __init__.py  amihud.py  depth.py  kyle_lambda.py  vwap.py
src/orderflowkit/metrics/order_flow/: __init__.py  bvc.py  imbalance.py  ofi.py  order_imbalance.py  tick_rule.py
src/orderflowkit/metrics/spread/: __init__.py  corwin_schultz.py  effective.py  high_low.py  roll.py
src/orderflowkit/metrics/volatility/: __init__.py  garman_klass.py  parkinson.py  realized.py  yang_zhang.py
src/orderflowkit/record/: __init__.py  quality.py  recorder.py  writers.py
src/orderflowkit/replay/: __init__.py  replay.py  sampler.py
src/orderflowkit/schemas/: __init__.py  bars.py  books.py  features.py  l2_events.py  labels.py  trades.py
src/orderflowkit/streams/: __init__.py  base.py  binance_ws.py  coinbase_ws.py  kraken_ws.py
src/orderflowkit/utils/: __init__.py  exceptions.py  resample.py  time.py  validators.py
src/orderflowkit/viz/: __init__.py  dashboard.py  flow_chart.py  liquidity_profile.py  orderbook_chart.py  spread_chart.py
tests/: conftest.py  test_book.py  test_cli.py  test_e2e_packaged_cli.py  test_features_labels_replay.py  test_feed_streams.py  test_metrics.py  test_pipeline.py  test_recording.py  test_schemas.py  test_utilities_and_helpers.py
