[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "OrderFlowKit"
version = "0.1.0"
description = "Free-data market microstructure analytics, order-flow features, and L2 book replay for Python"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "tayor" },
]
maintainers = [
  { name = "tayor" },
]
keywords = [
  "algorithmic-trading",
  "crypto",
  "finance",
  "liquidity",
  "machine-learning",
  "market-data",
  "microstructure",
  "order-book",
  "order-flow",
  "quant",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Financial :: Investment",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27",
  "numpy>=1.24",
  "orjson>=3.9",
  "pandas>=2.0",
  "pyarrow>=14",
  "pydantic>=2",
  "requests>=2.31",
  "rich>=13",
  "scipy>=1.11",
  "typer>=0.12,<0.25",
  "zstandard>=0.22",
]

[project.optional-dependencies]
bars = [
  "fredapi>=0.5",
  "yfinance>=0.2.36",
]
stream = [
  "websockets>=12",
]
viz = [
  "kaleido>=0.2",
  "plotly>=5.18",
]
polars = [
  "polars>=0.20",
]
dev = [
  "build>=1.2",
  "mypy>=1.10",
  "pandas-stubs>=2.0",
  "pre-commit>=3.7",
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "responses>=0.25",
  "ruff>=0.5",
  "twine>=5",
]
all = [
  "OrderFlowKit[bars,polars,stream,viz]",
]

[project.scripts]
ofk = "orderflowkit.cli.main:app"

[project.urls]
Homepage = "https://github.com/tayor/orderflowkit"
Documentation = "https://orderflowkit.readthedocs.io"
Issues = "https://github.com/tayor/orderflowkit/issues"
Source = "https://github.com/tayor/orderflowkit"

[tool.hatch.build.targets.wheel]
packages = ["src/orderflowkit"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --strict-config --cov=orderflowkit --cov-report=term-missing --cov-fail-under=85"
asyncio_mode = "auto"
markers = [
  "e2e: packaged distribution and CLI workflow validation",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP", "W"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B018"]

[tool.mypy]
python_version = "3.10"
packages = ["orderflowkit"]
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false
ignore_missing_imports = true
